# Data-Structures-and-Algorithms

Assigment_2/: CMakeLists.txt
Assignmennt_1/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Assignment_2/: CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
Assignment_4/: CMakeLists.txt  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  main.cpp
Assignment_5/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixIterator.cpp  MatrixIterator.h  ShortTest.cpp
Huffman/: CMakeLists.txt  code.cpp  code.h  decoder.cpp  define.h  encoder.cpp  huffman.cpp  huffman.h  io.cpp  io.h  node.cpp  node.h
LabApplication/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp  FixedCapBiMapIterator.h
